--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -804,177 +804,57 @@ button:disabled {
 ========================= */
 
 /* =========================
-   ANIMATED BACKGROUND CARDS - SVG VERSIONS
+   ANIMATED GIF BACKGROUNDS
+   (User requested "vrai gif")
 ========================= */
 
 /* Common container setup */
 .anim-bg-common {
     height: 140px;
     width: 100%;
-    background-repeat: repeat-x;
-    /* Repeat horizontally for movement */
-    background-position: 0 bottom;
-    background-size: auto 80%;
-    /* Keep icons sizeable */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     border-bottom: 1px solid #2a2f3a;
     position: relative;
     overflow: hidden;
 }
 
-/* 1. TOOLS: Rotating Gears */
-@keyframes rotateGear {
-    from {
-        transform: rotate(0deg);
-    }
+/* 
+   NOTE: If you want to change the GIFs, replace the files in:
+   docs/assets/img/bg/
+   (tools.gif, docs.gif, auto.gif, facture.gif, chrono.gif)
+*/
 
-    to {
-        transform: rotate(360deg);
-    }
-}
-
+/* 1. TOOLS */
 .bg-anim-tools {
-    /* Dark tech blue bg */
+    /* Fallback color */
     background-color: #0f172a;
-    /* We use a pseudo-element for the gear to rotate it easily without rotating the validation tick */
-    position: relative;
+    background-image: url('../assets/img/bg/tools.gif');
 }
 
-.bg-anim-tools::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    margin-top: -50px;
-    margin-left: -50px;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%233b82f6"><path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58a.49.49 0 0 0 .12-.61l-1.92-3.32a.488.488 0 0 0-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54a.484.484 0 0 0-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58a.49.49 0 0 0-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg>');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    animation: rotateGear 10s linear infinite;
-    opacity: 0.5;
-}
-
-/* 2. DOCS / RIB: Floating Shield/Bank */
-@keyframes floatShield {
-
-    0%,
-    100% {
-        transform: translateY(0);
-    }
-
-    50% {
-        transform: translateY(-10px);
-    }
-}
-
+/* 2. DOCS / RIB */
 .bg-anim-docs {
     background-color: #064e3b;
-    position: relative;
+    background-image: url('../assets/img/bg/docs.gif');
 }
 
-.bg-anim-docs::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80px;
-    height: 80px;
-    margin-top: -40px;
-    margin-left: -40px;
-    /* Shield Icon */
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%2334d399"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>');
-    background-repeat: no-repeat;
-    background-size: contain;
-    animation: floatShield 4s ease-in-out infinite;
-    opacity: 0.8;
-}
-
-/* 3. AUTO: Driving Car */
-@keyframes driveCar {
-    0% {
-        background-position: -200px bottom;
-    }
-
-    100% {
-        background-position: 100vw bottom;
-    }
-
-    /* Move across */
-}
-
+/* 3. AUTO */
 .bg-anim-auto {
     background-color: #7f1d1d;
-    /* Road line */
-    border-bottom: 4px solid #ef4444;
-    /* Car SVG */
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23ef4444"><path d="M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.5 16c-.83 0-1.5-.67-1.5-1.5S5.67 13 6.5 13s1.5.67 1.5 1.5S7.33 16 6.5 16zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM5 11l1.5-4.5h11L19 11H5z"/></svg>');
-    background-repeat: no-repeat;
-    background-size: 100px auto;
-    background-position: -150px bottom;
-    animation: driveCar 5s linear infinite;
+    background-image: url('../assets/img/bg/auto.gif');
 }
 
-/* 4. FACTURE: Receipt Printing */
-@keyframes printReceipt {
-    0% {
-        transform: translateY(-100%);
-        opacity: 0;
-    }
-
-    10% {
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(100%);
-        opacity: 0;
-    }
-}
-
+/* 4. FACTURE */
 .bg-anim-facture {
     background-color: #374151;
-    position: relative;
-    overflow: hidden;
+    background-image: url('../assets/img/bg/facture.gif');
 }
 
-.bg-anim-facture::before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: -20px;
-    transform: translateX(-50%);
-    width: 60px;
-    height: 80px;
-    /* Simple Receipt representation */
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%239ca3af"><path d="M3 0h18v24l-3-2-3 2-3-2-3 2-3-2-3 2V0zm5 6h8v2H8V6zm0 4h8v2H8v-2z"/></svg>');
-    background-size: contain;
-    background-repeat: no-repeat;
-    animation: printReceipt 3s linear infinite;
-    opacity: 0.6;
-}
-
-/* 5. CHRONOPOST: Fast Delivery Truck */
-@keyframes driveTruck {
-    0% {
-        background-position: -200px 50%;
-    }
-
-    100% {
-        background-position: calc(100% + 200px) 50%;
-    }
-}
-
+/* 5. CHRONOPOST */
 .bg-anim-chrono {
     background-color: #1e3a8a;
-    /* Speed lines effect via gradient in background-image if we wanted, but let's stick to the truck */
-    /* Truck SVG */
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23fbbf24"><path d="M20 8h-3V4H3c-1.1 0-2 .9-2 2v11h2c0 1.66 1.34 3 3 3s3-1.34 3-3h6c0 1.66 1.34 3 3 3s3-1.34 3-3h2v-5l-3-4zM6 18.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm13.5-9l1.96 2.5H17V9.5h2.5zm-1.5 9c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/></svg>');
-    background-repeat: no-repeat;
-    background-size: 120px auto;
-    background-position: -150px 50%;
-    animation: driveTruck 3s linear infinite;
+    background-image: url('../assets/img/bg/chrono.gif');
 }
 
 
